# master-thesis

./: .cursorignore  .gitignore  HYPERPARAM_SEARCH.md  README.md  annotations.csv  annotations.json  cli.py  evaluate_cv_misclassifications.py  evaluate_misclassifications.py  example_usage.py  extract_scores.py  frontend.py  hyper_main.py  main.py  master-thesis.ipynb  pyproject.toml  requirements.txt  sf.py  stormfront_eda.py
config/: config.yaml  conv_config.yaml  linear_hyperparam_config.yaml  mlp_config.yaml
config-zoo/: conv_config.yaml  mlp_config.yaml  mlp_hyperparam_config.yaml
data/: dataset.py  toxigen.py
models/: classification_heads.py  model.py
scripts/: analyze_best_epochs.py  analyze_misclassifications.py  compare_cv_runs.py  debug_statistical_tests.py  evaluate_cv_results.py
src/: train.py
src/data/: combined.py  dataset.py  stormfront.py  toxigen.py
src/models/: classification_head.py  classification_heads.py  factory.py  model.py
src/training/: checkpoint.py  early_stopping.py  metrics.py  trainer.py
src/utils/: annotation_tool.py  checkpoints.py  config.py  hyperparam_search.py  predictor.py
statistical eval/: finetune.csv  frozen.csv  test_wilcoxon_limitations.py  verify_minimum_pvalue.py  wilcoxon_crossval_comparison.py  wilcoxon_results.csv
training/: metrics.py  trainer.py
utils/: annotation_tool.py  checkpoints.py
