[project]
name = "master-thesis"
version = "0.1.0"
description = "Toxic Language Detection using Transformer Modles"
authors = [
    {name = "Jan Langela Regincos"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.48.2,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "datasets (>=3.2.0,<4.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "numpy (<2)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tiktoken (>=0.8.0,<0.9.0)",
    "protobuf (>=5.29.3,<6.0.0)",
    "sentencepiece (>=0.2.0,<0.3.0)",
    "streamlit (>=1.42.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
